--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "nodemon": "^1.11.0",
-    "webpack": "^1.14.0",
     "chai": "^3.5.0",
     "enzyme": "^2.7.1",
+    "fetch-mock": "^5.9.3",
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
-    "react-addons-test-utils": "^15.4.2"
+    "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.4.2",
+    "webpack": "^1.14.0"
   },
   "scripts": {
     "serve": "node ./server.js",
