--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "you!",
   "private": true,
   "dependencies": {
+    "chai-enzyme": "^0.6.1",
     "express": "^4.12.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
