--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chai-enzyme": "^0.6.1",
     "express": "^4.12.3",
+    "jsdom-global": "^2.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
